--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ body {
 
 .slider .slider__inner {
   position: relative;
-  height: 590px;
+  height: 594px;
 }
 
 .slider .slider__inner .slider__prev {
@@ -158,6 +158,8 @@ body {
   position: absolute;
   top: 50%;
   left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 20px;
   height: 30px;
   background-image: url("assets/img/slider/arrow-left.svg");
@@ -279,7 +281,7 @@ body {
 
 .slider .slider__inner .slider__iphone_main .slider__iphone_horizontal {
   position: absolute;
-  top: 174px;
+  top: 176px;
   left: 385px;
   /* .slider__iphone_horizontal-shadow {
         position: absolute;
@@ -312,7 +314,6 @@ body {
   content: '';
   top: 87px;
   right: 432px;
-  opacity: 0.5;
   width: 42px;
   height: 42px;
   border-radius: 50%;
@@ -373,7 +374,7 @@ body {
 .slider .slider__inner .slider__iphone_middle .slider__iphone_triple {
   position: absolute;
   top: 43px;
-  left: 252px;
+  left: 212px;
 }
 
 .slider .slider__inner .slider__iphone_middle .slider__iphone_triple img {
@@ -444,6 +445,8 @@ body {
   position: absolute;
   top: 50%;
   right: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
   width: 20px;
   height: 30px;
   background-image: url("assets/img/slider/arrow-right.svg");
@@ -569,16 +572,16 @@ body {
 }
 
 .services .services__inner {
-  padding-top: 62px;
-  padding-bottom: 27px;
+  padding-top: 64px;
+  padding-bottom: 29px;
 }
 
 .services .services__inner .services__title {
-  margin-bottom: 43px;
+  margin-bottom: 40px;
 }
 
 .services .services__inner .services__title h2 {
-  margin-bottom: 17px;
+  margin-bottom: 19px;
   font-family: 'Lato Black', sans-serif;
   font-size: 3rem;
   font-weight: 400;
@@ -694,7 +697,7 @@ body {
 
 .portfolio .portfolio__inner {
   padding-top: 63px;
-  padding-bottom: 67px;
+  padding-bottom: 58px;
 }
 
 .portfolio .portfolio__inner .portfolio__title {
@@ -714,13 +717,12 @@ body {
   font-family: 'Lato Light', sans-serif;
   font-size: 1.8rem;
   font-weight: 300;
-  letter-spacing: -0.2px;
   text-align: justify;
   color: #767e9e;
 }
 
 .portfolio .portfolio__inner .portfolio__list {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
 }
 
 .portfolio .portfolio__inner .portfolio__list ul {
@@ -833,7 +835,7 @@ body {
 }
 
 .about .about__inner .about__title {
-  margin-bottom: 43px;
+  margin-bottom: 42px;
 }
 
 .about .about__inner .about__title h2 {
@@ -886,7 +888,7 @@ body {
 }
 
 .about .about__inner .about__team-item img {
-  margin-bottom: 12px;
+  margin-bottom: 17px;
   width: 100%;
   height: auto;
 }
@@ -975,7 +977,7 @@ body {
 
 .quote .quote__inner {
   padding-top: 63px;
-  padding-bottom: 54px;
+  padding-bottom: 58px;
 }
 
 .quote .quote__inner .quote__title {
@@ -1006,6 +1008,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  /*       justify-content: space-between;
+      flex-direction: row; */
 }
 
 .quote .quote__inner .quote__info .quote__info_form {
@@ -1069,8 +1073,8 @@ body {
 .quote .quote__inner .quote__info .quote__info_form textarea {
   display: block;
   width: 100%;
-  height: 202px;
-  margin-bottom: 16px;
+  height: 159px;
+  margin-bottom: 14px;
   padding-top: 12px;
   padding-left: 15px;
   font-family: 'Lato Regular', sans-serif;
@@ -1480,7 +1484,7 @@ body {
 }
 
 /* @media screen and (max-width: 1019px) */
-@media (max-width: 1020px) and (min-width: 768px) {
+@media (max-width: 1019px) and (min-width: 768px) {
   .slider .slider__inner {
     height: 58vw;
   }
@@ -1488,8 +1492,8 @@ body {
     left: -1.4%;
   }
   .slider .slider__inner .slider__iphone_main .slider__iphone_vertical {
-    top: 5.5vw;
-    left: 7.1vw;
+    top: 5.2vw;
+    left: 5.7vw;
   }
   .slider .slider__inner .slider__iphone_main .slider__iphone_vertical img {
     width: 23.5vw;
@@ -1508,8 +1512,8 @@ body {
     height: 32.6vw;
   }
   .slider .slider__inner .slider__iphone_main .slider__iphone_horizontal {
-    top: 17.1vw;
-    left: 37.8vw;
+    top: 17.3vw;
+    left: 36.3vw;
   }
   .slider .slider__inner .slider__iphone_main .slider__iphone_horizontal img {
     width: 47.4vw;
@@ -1527,8 +1531,55 @@ body {
     width: 32.7vw;
     height: 18.5vw;
   }
+  .slider .slider__inner .slider__iphone_middle .slider__iphone_triple {
+    top: 5vw;
+    left: 24.8vw;
+  }
+  .slider .slider__inner .slider__iphone_middle .slider__iphone_triple img {
+    width: 50.5vw;
+    height: auto;
+  }
+  .slider .slider__inner .slider__iphone_middle .slider__iphone_triple .slider__iphone_middle-home {
+    top: 42.5vw;
+    left: 21.9vw;
+    width: 4.2vw;
+    height: 4.2vw;
+  }
+  .slider .slider__inner .slider__iphone_middle .slider__iphone_triple .slider__iphone_middle-pic {
+    top: 6.9vw;
+    left: 14.35vw;
+    width: 19.35vw;
+    height: 34.45vw;
+  }
   .slider .slider__inner .slider__next {
     right: -1.4%;
+  }
+  .services .services__inner {
+    padding-top: 42px;
+    padding-bottom: 18px;
+  }
+  .services .services__inner .services__title {
+    margin-bottom: 32px;
+  }
+  .services .services__inner .services__list ul {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+  .services .services__inner .services__list ul li {
+    margin-bottom: 54px;
+  }
+  .services .services__inner .services__list ul li:nth-child(2n + 1) {
+    margin-right: 53px;
+  }
+  .portfolio .portfolio__inner {
+    padding-bottom: 57px;
+  }
+  .portfolio .portfolio__inner .portfolio__title p {
+    line-height: 26px;
+  }
+  .portfolio .portfolio__inner .portfolio__list {
+    margin-bottom: 17px;
   }
   .portfolio .portfolio__inner .portfolio__images ul li {
     -ms-flex-preferred-size: 25%;
@@ -1546,26 +1597,51 @@ body {
   .portfolio .portfolio__inner .portfolio__images ul li:nth-child(3n) {
     margin-right: 0;
   }
-  .services .services__inner .services__list ul {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+  .about .about__inner {
+    padding-top: 55px;
+    padding-bottom: 53px;
   }
-  .services .services__inner .services__list ul li:nth-child(2n + 1) {
-    margin-right: 53px;
+  .about .about__inner .about__title {
+    margin-bottom: 36px;
   }
   .about .about__inner .about__team-item:nth-child(2) {
     margin-left: 15px;
     margin-right: 15px;
   }
+  .about .about__inner .about__team-item img {
+    margin-bottom: 12px;
+  }
+  .about .about__inner .about__team-item h3 {
+    margin-bottom: 4px;
+  }
+  .about .about__inner .about__team-item p {
+    margin-bottom: 12px;
+  }
+  .quote .quote__inner {
+    padding-top: 57px;
+    padding-bottom: 39px;
+  }
+  .quote .quote__inner .quote__title {
+    margin-bottom: 23px;
+  }
   .quote .quote__inner .quote__info .quote__info_form {
-    margin-right: 26px;
+    width: 80vw;
+    margin-right: 29px;
   }
   .quote .quote__inner .quote__info .quote__info_form input {
     margin-bottom: 12px;
   }
   .quote .quote__inner .quote__info .quote__info_form textarea {
-    margin-bottom: 14px;
+    margin-bottom: 17px;
+  }
+  .quote .quote__inner .quote__info .quote__info_contact {
+    margin-left: 2px;
+  }
+  .quote .quote__inner .quote__info .quote__info_contact h3 {
+    margin-bottom: 2px;
+  }
+  .quote .quote__inner .quote__info .quote__info_contact p {
+    margin-bottom: 15px;
   }
 }
 
